fixed label wrapping

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
 	border-left: solid 1px #e3e3e3;
 	padding-left: 4px;
 	color: #306a92;
+	white-space: nowrap;
 }
 
 .homer-dashboard > .content > .side-left > .chart{
